<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>au.com.addstar</groupId>
    <artifactId>CompManager-parent</artifactId>
    <version>0.0.4-SNAPSHOT</version>
    <packaging>pom</packaging>
    <properties>
        <build.number />
        <plugin.version>${project.version}-${build.number}</plugin.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <spigot.api.version>1.16</spigot.api.version>
        <spigot.version>1.20.1-R0.1-SNAPSHOT</spigot.version>
    </properties>
    <scm>
        <connection>scm:git:git@github.com:AddstarMC/CompManager.git</connection>
        <developerConnection>scm:git:git@github.com:AddstarMC/CompManager.git</developerConnection>
        <url>https://github.com/AddstarMC/CompManager</url>
        <tag>HEAD</tag>
    </scm>
    <developers>
        <developer>
            <id>AddstarMC</id>
            <name>AddstarMC</name>
            <url>http://github.com/AddstarMC</url>
            <roles>
                <role>developer</role>
                <role>maintainer</role>
            </roles>
            <timezone>10</timezone>
        </developer>
    </developers>
    <distributionManagement>
        <repository>
            <id>maven.addstar.com.au</id>
            <name>maven.addstar.com.au-releases</name>
            <url>https://maven.addstar.com.au/artifactory/ext-release-local</url>
        </repository>
        <snapshotRepository>
            <id>maven.addstar.com.au</id>
            <name>maven.addstar.com.au-snapshots</name>
            <url>https://maven.addstar.com.au/artifactory/ext-snapshot-local</url>
        </snapshotRepository>
    </distributionManagement>
    <modules>
        <module>server</module>
        <module>lobby</module>
        <module>common</module>
    </modules>
    <repositories>
        <repository>
            <id>addstar-release-repo</id>
            <url>https://maven.addstar.com.au/artifactory/all-release</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>addstar-repo</id>
            <url>https://maven.addstar.com.au/artifactory/all-snapshot</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>maven-central</id>
            <url>https://repo1.maven.org/maven2/</url>
        </repository>
        <repository>
            <id>papermc</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>
        <!-- For Vault -->
        <repository>
            <id>vault-repo</id>
            <name>Public Releases</name>
            <url>https://nexus.hc.to/content/repositories/pub_releases/</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>dmulloy2-releases</id>
            <url>https://repo.dmulloy2.net/content/repositories/releases/</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>dmulloy2-repo</id>
            <url>https://repo.dmulloy2.net/content/groups/public/</url>
        </repository>
        <repository>
            <id>IntellectualSites</id>
            <url>https://mvn.intellectualsites.com/content/groups/public/</url>
        </repository>
        <repository>
            <id>placeholderapi</id>
            <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
        </repository>
        <repository>
            <id>mvdw-software</id>
            <name>MVdW Public Repositories</name>
            <url>http://repo.mvdw-software.be/content/groups/public/</url>
        </repository>
        <repository>
            <id>mvnrepository</id>
            <name>mvnrepository</name>
            <url>https://mvnrepository.com/artifact/</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>io.papermc.paper</groupId>
            <artifactId>paper-api</artifactId>
            <version>${spigot.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>au.com.addstar</groupId>
            <artifactId>Monolith</artifactId>
            <version>1.16.5-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>me.clip</groupId>
            <artifactId>placeholderapi</artifactId>
            <version>2.11.4</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.sk89q.worldedit</groupId>
            <artifactId>worldedit-core</artifactId>
            <version>7.2.0-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>be.maximvdw</groupId>
            <artifactId>MVdWPlaceholderAPI</artifactId>
            <version>3.0.0-SNAPSHOT</version>
            <scope>provided</scope>
            <exclusions>
                <exclusion>
                    <groupId>org.spigotmc</groupId>
                    <artifactId>spigot</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
    </dependencies>
    <build>
        <finalName>${project.artifactId}</finalName>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.10.1</version>
                    <configuration>
                        <source>17</source>
                        <target>17</target>
                        <!--<fork>true</fork>-->
                        <compilerArgs>
                            <arg>--enable-preview</arg>
                            <arg>-Xlint:all</arg>
                            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
                            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
                            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
                            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
                            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
                            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
                            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
                            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
                            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
                            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED</arg>
                        </compilerArgs>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>3.2.1</version>
                    <configuration>
                        <attach>true</attach>
                    </configuration>
                    <executions>
                        <execution>
                            <id>attach-sources</id>
                            <phase>verify</phase>
                            <goals>
                                <goal>jar-no-fork</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>2.5.3</version>
            </plugin>
            <plugin><!--dont need to deploy this on release-->
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>2.8.2</version>
                <configuration>
                    <skip>true</skip>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>2.7</version>
            </plugin>
        </plugins>
    </build>
</project>
